# Hackathon-2-TODO

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/1-console-todo-app/: 1-spec-todo-app.spec.prompt.md  2-plan-todo-app.plan.prompt.md  3-tasks-todo-app.tasks.prompt.md
specs/1-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-console-todo-app/checklists/: requirements.md
specs/1-console-todo-app/contracts/: cli-commands.md
src/: app.py
src/cli/: commands.py  menu.py
src/models/: todo.py
src/services/: todo_service.py
src/utils/: helpers.py  validators.py
tests/unit/: test_todo.py  test_todo_service.py
