[project]
name = "console-todo-app"
version = "0.1.0"
description = "A simple, in-memory command-line todo application built with Python"
authors = [{name = "Muhammed Daniyal", email = "daniyal@proveintech.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
todo = "src.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]